Change symbols for availableSymbols